@@ -5,7 +5,7 @@ classifiers = [
   'Environment :: Win32 (MS Windows)',
   'Intended Audience :: Developers',
   'Intended Audience :: System Administrators',
-  'License :: PSF',
+  'License :: MIT',
   'Natural Language :: English',
   'Operating System :: Microsoft :: Windows :: Windows 95/98/2000',
   'Topic :: System :: Systems Administration'
@@ -13,7 +13,7 @@ classifiers = [
 
 setup (
   name = "WMI",
-  version = "1.1",
+  version = "1.1.1",
   description = "Windows Management Instrumentation",
   author = "Tim Golden",
   author_email = "mail@timgolden.me.uk",
